# pymbcn

./: .gitignore  INFO.md  LICENSE  MBC-QDM.R  README.md  cccma_output.nc  compare_mbcn.py  conversion.md  mbc_qdm.py  mbc_r_wrapper.py  pymbcn.py  pyproject.toml  python_corrected_output.nc  r_corrected_output.nc  requirements.txt  testcode.R  testcode.py
MBC_R/R/: MBC-QDM.R  cccma_gcm_c.csv  cccma_gcm_p.csv  load_cccma.R  load_data.R  ran_rot.py  read_data.py  run_Rcom  testcode.R
MBC_R/data/: .RData  README  convert_cccma.R  convert_cccma.Rout
pymbcn/: jax.py  pymbcn.py
tests/: README  TESTCODE_DOCUMENTATION.md  compare_outputs.py  compare_purepy_to_r2py_outputs.py  compare_r2py_to_R_outputs.py  mbc_r_wrapper.py  python_corrected_output.nc  testcode.py
