=======                                                                                                                        
[build-system]                                                                                                                 
requires = ["setuptools>=42"]                                                                                                  
build-backend = "setuptools.build_meta"                                                                                        
                                                                                                                               
[project]                                                                                                                      
name = "pymbcn"                                                                                                                
version = "0.1.0"                                                                                                              
description = "Multivariate Bias Correction Methods for Climate Model Outputs"                                                 
readme = "README.md"                                                                                                           
requires-python = ">=3.8"                                                                                                      
license = {text = "MIT"}                                                                                                       
authors = [                                                                                                                    
    {name = "Guido Vettoretti", email = "2guido@gmail.com"},                                                                    
]                                                                                                                              
classifiers = [                                                                                                                
    "Development Status :: 4 - Beta",                                                                                          
    "Intended Audience :: Science/Research",                                                                                   
    "License :: OSI Approved :: MIT License",                                                                                  
    "Programming Language :: Python :: 3",                                                                                     
    "Topic :: Scientific/Engineering :: Atmospheric Science",                                                                  
]                                                                                                                              
dependencies = [                                                                                                               
    "numpy>=1.20.0",                                                                                                           
    "scipy>=1.7.0",                                                                                                            
    "scikit-learn>=1.0.0",                                                                                                     
]                                                                                                                              
                                                                                                                               
[project.urls]                                                                                                                 
Homepage = "https://github.com/guidov/pymbcn"                                                                            
Documentation = "https://github.com/guidov/pymbcn#readme"                                                                
                                                                                                                               
[tool.setuptools]                                                                                                              
packages = ["pymbcn"]                                                                                                          

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymbcn"
version = "0.1.0"
description = "Multivariate Bias Correction Methods for Climate Model Outputs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Guido Vettoretti", email = "2guido@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/guidov/pymbcn"
Documentation = "https://github.com/guidov/pymbcn#readme"

[tool.setuptools]
packages = ["pymbcn"]
[build-system]                                                                                                                 
requires = ["setuptools>=42"]                                                                                                  
build-backend = "setuptools.build_meta"                                                                                        
                                                                                                                               
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymbcn"
version = "0.1.0"
description = "Multivariate Bias Correction Methods for Climate Model Outputs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Guido Vettoretti", email = "2guido@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/guidov/pymbcn"
Documentation = "https://github.com/guidov/pymbcn#readme"

[tool.setuptools]
packages = ["pymbcn"]
[build-system]                                                                                                                 
requires = ["setuptools>=42"]                                                                                                  
build-backend = "setuptools.build_meta"                                                                                        
                                                                                                                               
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymbcn"
version = "0.1.0"
description = "Multivariate Bias Correction Methods for Climate Model Outputs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Guido Vettoretti", email = "2guido@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/guidov/pymbcn"
Documentation = "https://github.com/guidov/pymbcn#readme"

[tool.setuptools]
packages = ["pymbcn"]
